--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Setup Node.js environment
       uses: actions/setup-node@v3
       with:
-        node-version: [10.x, 12.x, 14.x, 15.x, 16.x]
+        node-version: '10.x 12.x 14.x 15.x 16.x'
 
     - name: Install dependencies
       run: npm install
