--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "regenerator-runtime": "^0.13.7",
     "three": "^0.124.0",
     "turf": "^3.0.14",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
