--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "geotiff": "^1.0.0-beta.16",
     "ol": "^6.5.0",
     "ol-mapbox-style": "^6.3.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "^1.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
     "proj4": "^2.6.3",
     "regenerator-runtime": "^0.13.7",
-    "three": "^0.124.0",
+    "three": "^0.150.1",
     "turf": "^3.0.14",
     "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.11"
   },
   "devDependencies": {
@@ -35,7 +36,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "parcel-plugin-static-files-copy": "^2.5.0"
+    "parcel-plugin-static-files-copy": "^1.2.4"
   },
   "staticFiles": {
     "staticPath": "data",
