--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ol-mapbox-style": "^6.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
+    "proj4": "^2.9.0",
     "regenerator-runtime": "^0.13.7",
+    "three": "^0.150.1",
     "turf": "^3.0.14",
     "vue": "^3.2.13"
   },
