prise en main flask

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "regenerator-runtime": "^0.13.7",
     "three": "^0.146.0",
     "turf": "^3.0.14",
+    "usepython": "^0.0.11",
     "vue": "^3.2.13",
     "vue-plotly": "^1.1.0",
     "vue-router": "^4.1.6",
+    "vuepython": "^0.0.18",
     "vuetify": "^3.1.11"
   },
   "devDependencies": {
