package.json clean , removing console errors

--- a/package.json
+++ b/package.json
@@ -11,26 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@turf/turf": "^5.1.6",
     "core-js": "^3.8.3",
-    "data": "^0.6.1",
-    "geotiff": "^1.0.0-beta.16",
     "itowns": "^2.39.0",
-    "ol": "^6.5.0",
-    "ol-mapbox-style": "^6.3.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
-    "proj4": "^2.9.0",
     "python-shell": "^5.0.0",
     "regenerator-runtime": "^0.13.7",
-    "three": "^0.146.0",
-    "turf": "^3.0.14",
-    "usepython": "^0.0.11",
-    "vue": "^3.2.13",
-    "vue-plotly": "^1.1.0",
-    "vue-router": "^4.1.6",
-    "vuepython": "^0.0.18",
-    "vuetify": "^3.1.11"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -40,12 +27,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jscharting-vue": "^2.4.0",
-    "parcel-plugin-static-files-copy": "^1.2.4"
-  },
-  "staticFiles": {
-    "staticPath": "data",
-    "watcherGlob": "**"
+    "jscharting-vue": "^2.4.0"
   },
   "description": "",
   "eslintConfig": {
