--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.8.3",
+    "http-server": "^14.1.1",
     "itowns": "^2.39.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
     "python-shell": "^5.0.0",
     "regenerator-runtime": "^0.13.7",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
