--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "primevue": "^3.26.0",
     "python-shell": "^5.0.0",
     "regenerator-runtime": "^0.13.7",
-    "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
