--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "^3.8.3",
+    "geotiff": "^2.0.7",
     "itowns": "^2.39.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
