--- a/http-server/Dockerfile
+++ b/http-server/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:latest
-WORKDIR /api
-COPY data data
+WORKDIR /http-server
 RUN npm install -g http-server
 EXPOSE 8080
 CMD ["http-server", "data"]
