--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apexcharts": "^3.37.3",
     "core-js": "^3.8.3",
     "d3": "^7.8.4",
     "http-server": "^14.1.1",
