--- a/http-server/Dockerfile
+++ b/http-server/Dockerfile
@@ -2,4 +2,4 @@ FROM node:latest
 WORKDIR /http-server
 RUN npm install -g http-server
 EXPOSE 8080
-CMD ["http-server", "data"]
+CMD ["http-server", "data", "--cors"]
