--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "apexcharts": "^3.37.3",
     "core-js": "^3.8.3",
     "d3": "^7.8.4",
-    "http-server": "^14.1.1",
     "geotiff": "^2.0.7",
+    "highcharts": "^10.3.3",
+    "highcharts-vue": "^1.4.0",
+    "http-server": "^14.1.1",
     "itowns": "^2.39.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.26.0",
@@ -24,7 +26,8 @@
     "regenerator-runtime": "^0.13.7",
     "three": "^0.146.0",
     "vue": "^3.2.13",
-    "vue3-apexcharts": "^1.4.1"
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-highcharts": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
