added hfin/hmax button that changes paths to tifs

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ data/Data
 data/jsonData
 data/output_rasters
 data/output_rasters_clipped
+data/MNS_GAVRES.tif
+data/output_rasters_clipped.zip
 
 # local env files
 .env.local
